# addon-semantic-router

./: .flake8  .gitignore  AGENTS.md  README.md
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: build.yaml  pr-labeler.yaml  release-draft.yaml  test.yaml
scripts/: README.md  make_backend.sh  make_docker.sh  make_frontend.sh  make_venv.sh  run_app.sh  run_docker.sh  run_tests.sh
semantic-router/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
semantic-router/backend/: README.md  database.py  logging_utils.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_test.txt  router_manager.py  routes.py  schemas.py  tasks.py  utils.py
semantic-router/backend/crud/: __init__.py  base.py  config.py  exceptions.py  llm.py  log.py  route.py  utterance.py
semantic-router/backend/routes/: __init__.py  crud.py  frontend.py  query.py
semantic-router/backend/tests/: test_crud_base.py  test_database.py  test_integrity.py  test_main.py  test_query_coverage.py  test_query_logging.py  test_query_streaming.py  test_router_manager.py  test_semantic_understanding.py  test_tasks.py
semantic-router/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
semantic-router/frontend/src/: declarations.d.ts  index.css  llm-manager.test.ts  llm-manager.ts  log-viewer.test.ts  log-viewer.ts  main.ts  route-manager.test.ts  route-manager.ts  semantic-router-app.test.ts  semantic-router-app.ts  semantic-router-test-tab.test.ts  semantic-router-test-tab.ts  shared-styles.ts
semantic-router/frontend/src/components/: config-view.test.ts  config-view.ts  sr-badge.ts  sr-button.ts  sr-empty-state.ts  sr-form-group.ts  sr-list-item.ts  sr-modal.ts
