[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-router-backend"
description = "RESTful API for the Semantic Router backend"
authors = [
    { name = "Stuart Clark", email = "stuart.clark@Jahingo.com" }
]
dependencies = [
    "semantic-router",
    "httpx",
    "torch",
    "sentence-transformers",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "aiofiles"
]
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".venv,venv,build,dist"

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
