[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-router-backend"
description = "RESTful API for the Semantic Router backend"
authors = [
    { name = "Stuart Clark", email = "stuart.clark@Jahingo.com" }
]
dependencies = [
    "semantic-router[fastembed]==0.1.13",
    "fastembed==0.8.0",
    "httpx==0.28.1",
    "fastapi==0.136.1",
    "uvicorn==0.47.0",
    "sqlalchemy==2.0.49",
    "pydantic==2.13.4"
]
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ".venv,venv,build,dist"

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0
